2025-04-03:

	2.7.2 released.

	* Fixed compatibility issues when building with CMake 4.0 that no longer supports
	  build scripts requiring minimum CMake version below 3.5. (#127)

2023-10-11:

	2.7.1 released.

	* Fixed initialisation of ROMInfo objects which caused crashes of client applications
	  when accessing the static ROM data. Currently, only builds with clang-17.0 are affected
	  which is used in MSYS2 environment. (#115)

2022-07-23:

	2.7.0 released.

	* Added support for MT-32 control ROM v.2.03. (#92)
	* Provided two new functions for retrieving names of all standard timbres and their
	  "sound groups". These also make it easier to retrieve names of custom timbres. (#91)

2022-04-16:

	2.6.3 released.

	* To improve portability on some systems where multiple ABIs are supported with different
	  calling conventions (notably 32-bit Windows), all the public C functions now declare
	  the C calling convention explicitly, that makes a shared library build compatible with
	  a project who utilises another calling convention. (#89)
	* Function mt32emu_configure_midi_event_queue_sysex_storage from the C-compatible API
	  is now correctly exported in the declaration. Previously, it was only accessible when
	  building the library statically or via the plugin-like API. (#90)

2022-03-06:

	2.6.0 released.

	* Added support for three more control ROMs: MT-32 v.2.06, v.2.07 and CM-32LN v.1.00.
	* Improved CMake build script for mt32emu. Notably:
	  * The build script now populates the relevant library target properties, so that linking
	    the mt32emu target in a dependent project is sufficient for the build to succeed,
	    without necessity to use any extra variables.
	  * A complete CMake package with configuration, version and targets files is now installed
	    onto the target system. This package simplifies configuration of the other projects,
	    yet facilitates reliable builds with optional transitive library dependencies.