@@ -44,7 +44,7 @@ class LA32FloatWaveGenerator {
 	bool sawtoothWaveform;
 
 	// Values in range [1..31]
-	// Value 1 correspong to the minimum resonance
+	// Value 1 corresponds to the minimum resonance
 	Bit8u resonance;
 
 	// Processed value in range [0..255]
@@ -103,6 +103,8 @@ class LA32FloatPartialPair : public LA32PartialPair {
 	float slaveOutputSample;
 
 public:
+	static void initTables(const Tables &tables);
+
 	// ringModulated should be set to false for the structures with mixing or stereo output
 	// ringModulated should be set to true for the structures with ring modulation
 	// mixed is used for the structures with ring modulation and indicates whether the master partial output is mixed to the ring modulator output
