@@ -24,6 +24,8 @@
 
 namespace MT32Emu {
 
+struct Tables;
+
 /**
  * LA32 performs wave generation in the log-space that allows replacing multiplications by cheap additions
  * It's assumed that only low-bit multiplications occur in a few places which are unavoidable like these:
@@ -43,13 +45,6 @@ struct LogSample {
 		POSITIVE,
 		NEGATIVE
 	} sign;
-};
-
-class LA32Utilites {
-public:
-	static Bit16u interpolateExp(const Bit16u fract);
-	static Bit16s unlog(const LogSample &logSample);
-	static void addLogSamples(LogSample &logSample1, const LogSample &logSample2);
 };
 
 /**
@@ -77,7 +72,7 @@ class LA32WaveGenerator {
 	Bit16u pitch;
 
 	// Values in range [1..31]
-	// Value 1 correspong to the minimum resonance
+	// Value 1 corresponds to the minimum resonance
 	Bit8u resonance;
 
 	// Processed value in range [0..255]
@@ -236,6 +231,8 @@ class LA32IntPartialPair : public LA32PartialPair {
 	static Bit16s unlogAndMixWGOutput(const LA32WaveGenerator &wg);
 
 public:
+	static void initTables(const Tables &tables);
+
 	// ringModulated should be set to false for the structures with mixing or stereo output
 	// ringModulated should be set to true for the structures with ring modulation
 	// mixed is used for the structures with ring modulation and indicates whether the master partial output is mixed to the ring modulator output
