@@ -29,17 +29,17 @@
 namespace MT32Emu {
 
 // FIXME: Add Explanation
-static Bit16u lowerDurationToDivisor[] = {34078, 37162, 40526, 44194, 48194, 52556, 57312, 62499};
+static const Bit16u lowerDurationToDivisor[] = {34078, 37162, 40526, 44194, 48194, 52556, 57312, 62499};
 
 // These values represent unique options with no consistent pattern, so we have to use something like a table in any case.
 // The table matches exactly what the manual claims (when divided by 8192):
 // -1, -1/2, -1/4, 0, 1/8, 1/4, 3/8, 1/2, 5/8, 3/4, 7/8, 1, 5/4, 3/2, 2, s1, s2
 // ...except for the last two entries, which are supposed to be "1 cent above 1" and "2 cents above 1", respectively. They can only be roughly approximated with this integer math.
-static Bit16s pitchKeyfollowMult[] = {-8192, -4096, -2048, 0, 1024, 2048, 3072, 4096, 5120, 6144, 7168, 8192, 10240, 12288, 16384, 8198, 8226};
+static const Bit16s pitchKeyfollowMult[] = {-8192, -4096, -2048, 0, 1024, 2048, 3072, 4096, 5120, 6144, 7168, 8192, 10240, 12288, 16384, 8198, 8226};
 
 // Note: Keys < 60 use keyToPitchTable[60 - key], keys >= 60 use keyToPitchTable[key - 60].
 // FIXME: This table could really be shorter, since we never use e.g. key 127.
-static Bit16u keyToPitchTable[] = {
+static const Bit16u keyToPitchTable[] = {
 	    0,   341,   683,  1024,  1365,  1707,  2048,  2389,
 	 2731,  3072,  3413,  3755,  4096,  4437,  4779,  5120,
 	 5461,  5803,  6144,  6485,  6827,  7168,  7509,  7851,
