@@ -1,3 +1,7 @@
+HEAD:
+
+	* Performance improvements based on (#131).
+
 2025-04-03:
 
 	2.7.2 released.
